--- a/src/components/listItem/listItem.scss
+++ b/src/components/listItem/listItem.scss
@@ -13,13 +13,65 @@
 		object-fit: cover;
 	}
 
+	video {
+		width: 100%;
+		height: 140px;
+		object-fit: cover;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
 	&:hover {
 		width: 325px;
 		height: 300px;
+		position: absolute;
+		top: -150px;
 		-webkit-box-shadow: 2px 2px 20px 0px rgba(255, 255, 255, 0.22);
 		box-shadow: 2px 2px 20px 0px rgba(255, 255, 255, 0.22);
+		border-radius: 10px;
 		img {
 			height: 140px;
+		}
+
+		.itemInfo {
+			display: flex;
+			flex-direction: column;
+			padding: 5px;
+			.icons {
+				display: flex;
+				margin-bottom: 10px;
+
+				.icon {
+					border: 2px solid white;
+					padding: 5px;
+					border-radius: 50%;
+					margin-right: 10px;
+					font-size: 1.5rem;
+				}
+			}
+			.itemInfoTop {
+				display: flex;
+				align-items: center;
+				margin-bottom: 10px;
+				font-size: 1rem;
+				font-weight: 600;
+				color: gray;
+
+				.limit {
+					border: 1px solid gray;
+					padding: 1px 3px;
+					margin: 0 10px;
+				}
+			}
+			.desc {
+				font-size: 0.8rem;
+				margin-bottom: 10px;
+			}
+			.genre {
+				font-size: 1.1rem;
+				color: lightgray;
+			}
 		}
 	}
 }
